<resources>
    <string name="app_name">LapitChat</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="login">LOGIN</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="welcome_to_lapit_n_chat_app">Welcome to Lapit \n Chat App</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I\'m using Lapit Chat App</string>
</resources>
